Youtube navbar jump on scroll fix

--- a/Youtube/css/navigation.css
+++ b/Youtube/css/navigation.css
@@ -5,7 +5,7 @@
   scrollbar-width: none;
   height: calc(100vh - 7rem);
   position: sticky;
-  top: 5.6rem;
+  top: 7rem;
   left: 0;
   grid-column: 1;
   grid-row: 1/-1;
